# elec-competation-signal-analyse

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
00_参考资料/: 信号题器件趋势深度分析.md  器件清单对照与趋势分析.md  硬件实现方案分析.md
00_参考资料/专业术语与公式速查手册/: 信号及仪器仪表专业术语与公式手册.md  出题者上层理念与产业哲学.md
2021/00_官方资料/: 2021年仪器设备和主要元器件清单.md  J题_text.txt
2021/01_题目分析/A_信号失真度测量装置/: A题_产业视角与技术溯源.md  A题_硬件方案分析.md  A题_题目详解.md
2021/01_题目分析/J_周期信号波形识别及参数测量装置/: J题_产业视角与技术溯源.md  J题_硬件方案分析.md  J题_题目详解.md
2021/02_仿真与代码/A_信号失真度测量装置/: THD_Simulation_2021A_v2.m  Test6_7_Supplementary.py
2021/03_复现报告/: 2021-A题_MATLAB复现报告.md  2021-J题_MATLAB复现报告.md
2022/00_官方资料/: 2022年仪器设备和主要元器件及器材清单.md
2022/03_复现报告/: 2022-F题_MATLAB复现报告.md
2023/00_官方资料/: 2023年仪器设备和主要元器件及器材清单.md
2023/03_复现报告/: 2023-B题_MATLAB复现报告.md  2023-C题_MATLAB复现报告.md  2023-D题_MATLAB复现报告.md  2023-H题_MATLAB复现报告.md
2024/00_官方资料/: 2024年仪器设备和主要元器件及器材清单.md
2024/03_复现报告/: 2024-B题_MATLAB复现报告.md  2024-C题_MATLAB复现报告.md  2024-G题_MATLAB复现报告.md
2025/00_官方资料/: 2025年仪器设备和主要元器件及器材清单.md
2025/03_复现报告/: 2025-D题_MATLAB复现报告.md  2025-F题_MATLAB复现报告.md  2025-G题_MATLAB复现报告.md
docs/hardware/: 06-decisions.md  07-schematics.md  hardware-solution.html
signal_toolkit/: README.md  __init__.py  dds_synthesis.py  fft_analysis.py  filters.py  goertzel.py  impedance_analysis.py  iq_demodulation.py  modulation_classification.py  power_analysis.py  tdr_analysis.py  utils.py  waveform_analysis.py
signal_toolkit/examples/: example_dds.py  example_fft.py  example_goertzel.py  example_iq.py  example_tdr.py
tests/: test_signal_toolkit.py
(+49 files in other folders)
